--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@
     #4650bd 100%
   );
   --branco: #ffffff;
+  --box-shadow: #444444;
 
   --fonte-principal: "Raleway", sans-serif;
   font-size: 62.5%;
